# ml_pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
.github/workflows/: ci-cd.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
configs/: README.md
data/: README.md  sample.csv  sample.joblib  sample.json  sample.pkl
notebooks/: README.md
scripts/: README.md
scripts/dev/: create_sample_csv.py  create_sample_joblib.py  create_sample_json.py  create_sample_pickle.py  create_sample_postgresql.py
src/common/: README.md  datasource.py  exception.py  logger.py  type_defs.py  utils.py
src/common/monitoring/: README.md  logger.py
src/common/reporting/: README.md
src/common/sources/: __init__.py  api_source.py  base_source.py  bigquery_source.py  csv_source.py  datasource_base.py  gcs_source.py  hdf5_source.py  hdfs_source.py  joblib_source.py  json_source.py  kafka_source.py  kinesis_source.py  mongodb_source.py  mysql_source.py  pickle_source.py  postgres_source.py  postgresql_source.py  redis_source.py  s3_source.py  snowflake_source.py  sql_source.py
src/common/sources/dev/: api_source.py  bigquery_source.py  gcs_source.py  hdf5_source.py  hdfs_source.py  kafka_source.py  kinesis_source.py  mongodb_source.py  mysql_source.py  postgresql_source.py  redis_source.py  s3_source.py  snowflake_source.py  sql_source.py
src/components/: type_defs.py
src/components/evaluation/: README.md
src/components/explainability/: README.md
src/components/features/: README.md  feature_selection.py
src/components/inference/: README.md
src/components/ingestion/: ingest_task.py  ingestion.py
src/components/ingestion/connectors/: README.md
src/components/model_training/: README.md
src/components/training/: README.md  model_trainer.py  training.py
src/components/transformation/: README.md  transformation.py
src/pipelines/: README.md  ingest_pipeline.py  predict_pipeline.py  training_pipeline.py
src/templates/: ingest.html
templates/: ingest.html  predict.html  train.html  transform.html
tests/: README.md  create_test_data.py  test_csv_source_load.py  test_data_transformation.py  test_datasource_io.py  test_ingest.py  test_ingestion_manager.py  test_model_training.py
tests/postgresql/: docker-compose.yml  init.sql  run_test_postgresql.sh  test_datasource_io.py
