[tool.poetry]
name = "e2emlproject"
version = "0.0.1"
description = "Your project description here"
authors = ["ben <bengisla123@gmail.com>"]
readme = "README.md"
packages = [{include = "."}]
python = ">=3.7"

[tool.poetry.dependencies]
python = ">=3.7"
pandas = "^1.5"
numpy = "^1.25"
seaborn = "^0.12"
scikit-learn = "^1.3"
catboost = "^1.1"
xgboost = "^1.7"
dill = "^0.3"
joblib = "^1.3"
flask = "^2.3"
prefect = "^2.9"
pyspark = "^3.4"
sqlalchemy = "^2.0"
pyarrow = "^12.0"
tables = "^3.7"
python-dateutil = "^2.8"

# Core cloud and db drivers included in optional extras

[tool.poetry.extras]
bigquery = ["google-cloud-bigquery (^3.8)"]
snowflake = ["snowflake-connector-python (^3.0)"]
gcs = ["google-cloud-storage (^2.10)"]
s3 = ["boto3 (^1.26)"]
hdfs = ["hdfs (^2.7)"]
mongodb = ["pymongo (^4.3)"]
redis = ["redis (^4.5)"]
kafka = ["kafka-python (^2.0)"]
kinesis = ["boto3 (^1.26)"]   # same boto3 as s3
postgresql = ["psycopg2-binary (^2.9)"]
mysql = ["mysql-connector-python (^8.0)"]
hdf5 = ["tables (^3.7)"]

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
