[tool.poetry]
name = "ml_pipeline"
version = "0.0.1"
description = "Modular, reusable components for building end-to-end ML workflows."
authors = ["ben <bengisla123@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_pipeline", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"
pytest = ">=8.1"
pandas = "^1.5"
numpy = "^1.25"
seaborn = "^0.12"
scikit-learn = "^1.3"
scikit-optimize = "^0.9.0"  # <-- Add this
catboost = "^1.1"
xgboost = "^1.7"
dill = "^0.3"
joblib = "^1.3"
flask = "^2.3"
prefect = "^2.9"
pyspark = "^3.4"
sqlalchemy = "^2.0"
pyarrow = "^12.0"
tables = "^3.7"
python-dateutil = "^2.8"
shap = "^0.47"

# Optional dependencies
google-cloud-bigquery = { version = "^3.8", optional = true }
snowflake-connector-python = { version = "^3.0", optional = true }
google-cloud-storage = { version = "^2.10", optional = true }
boto3 = { version = "^1.26", optional = true }
hdfs = { version = "^2.7", optional = true }
pymongo = { version = "^4.3", optional = true }
redis = { version = "^4.5", optional = true }
kafka-python = { version = "^2.0", optional = true }
psycopg2-binary = { version = "^2.9", optional = true }
mysql-connector-python = { version = "^8.0", optional = true }

[tool.poetry.extras]
bigquery = ["google-cloud-bigquery"]
snowflake = ["snowflake-connector-python"]
gcs = ["google-cloud-storage"]
s3 = ["boto3"]
hdfs = ["hdfs"]
mongodb = ["pymongo"]
redis = ["redis"]
kafka = ["kafka-python"]
kinesis = ["boto3"]
postgresql = ["psycopg2-binary"]
mysql = ["mysql-connector-python"]
hdf5 = ["tables"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pylint = "^3.2.6"
black = "^24.3.0"
isort = "^5.13.2"
pytest = ">=8.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest"
